# daimon

./: .gitignore  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml  refactor.md
.github/workflows/: art-manifest.yml  release-binaries.yml  test.yml  wezterm-bundle.yml
daimon/: __init__.py  _winspawn.py  bootstrap.py  cli.py  collection.py  imprint.py  match_history.py  pity.py  pulls.py
daimon/arena/: __init__.py  cache.py  client.py  crypto.py  encoding.py  ops.py  state.py
daimon/cards/: __init__.py  loader.py
daimon/catalog/: __init__.py  loader.py
daimon/catalog/v1_alpha/: abyss_minnow.json  abyss_warden.json  abyssbreaker.json  abysseel.json  aegis_lion.json  anvilram.json  arc_kit.json  arc_lancer.json  arc_predator.json  arc_pup.json  arc_serpent.json  arcweasel.json  ash_strider.json  ashen_phoenix.json  ashling.json  ashpup.json  barkguard.json  barkpup.json  blade_foxling.json  blazefiend.json  blazewolf.json  boltbat.json  boltkit.json  boltrunner.json  boulder_mole.json  bramble_warden.json  bramblegoat.json  brambleling.json  brass_mole.json  brimling.json  brineling.json  brineprince.json  bubblefry.json  bulwark_patriarch.json  bulwarthog.json  charge_chick.json  cinder_lancer.json  cinder_serpent.json  cinderhound.json  cindermote.json  (+176 more)
daimon/ceremony/: __init__.py  state.py  tier_up.py
daimon/daemon/: entry.py  lock.py  spawn.py
daimon/engine/: __init__.py  combat.py  conditions.py  elements.py  loadout.py  types.py
daimon/identity/: __init__.py  bip39.py  keys.py
daimon/inbox/: __init__.py  config.py  cursor.py  sse.py  wait.py
daimon/install/: __init__.py  installer.py
daimon/loadouts/: __init__.py  active.py  loader.py
daimon/loadouts/showcase/: __init__.py  manifest.json  showcase_l10_worldroot_garden.json  showcase_l1_inferno_burnstack.json  showcase_l2_bulwark_thorns.json  (+8 more)
daimon/mcp/: __init__.py  __main__.py  installer.py  server.py
daimon/mining/: __init__.py  buffer.py  formula.py  hook.py  installer.py  ledger.py  protocol.md
daimon/npcs/: __init__.py  loader.py  manifest.json
daimon/onboard/: __init__.py  claude_code.py  orchestrator.py  stages.py
daimon/play/: __init__.py  adapter.py  animator.py  art_render.py  card_tile.py  collection_ui.py  demo.py  frame.py  home_card.py  loadout_editor.py  menu_ui.py  pil_renderer.py  primitives.py  publish.py  schema.py  screenshot.py  shop_ui.py  spawn.py  state.py  terminal.py  tile.py  tui_style.py
daimon/quests/: __init__.py  catalog.py  progress.py  roll.py  state.py
daimon/render/: __init__.py  art.py  cascade.py  compose.py  hybrid.py  kgp.py  wezterm.lua  wezterm_bundle.py
daimon/shop/: __init__.py  core.py  equipped.py  errors.py  listings.py  owned.py  rotation.py
daimon/ui/: __init__.py  app.py  bindings.py  events.py  frame.py  input.py  layout.py  screen.py  widget.py  widgets.py
daimon/update/: __init__.py  __main__.py  api.py  checker.py  fetcher.py  lazy.py  manifest.py  paths.py  prefetch.py
daimon/web/: live.py  routes.py  server.py
docs/: animation_design.md  art_validation_2026-04-23.md  canon_audit.md  canon_mapping.md  card_design_v1.md  release.md  shop_design.md
nullpoint/: __init__.py  cli.py  collection.py  pulls.py
nullpoint/cards/: __init__.py  loader.py
nullpoint/catalog/: __init__.py  loader.py
nullpoint/engine/: __init__.py  combat.py  elements.py  loadout.py  rng.py  types.py
nullpoint/identity/: __init__.py  keys.py
nullpoint/mcp/: __init__.py  __main__.py  server.py
nullpoint/mining/: __init__.py  hook.py  installer.py  ledger.py  protocol.md
nullpoint/play/: __init__.py  animator.py  card_tile.py  frame.py  inbox.py  pil_renderer.py  primitives.py  schema.py
nullpoint/render/: __init__.py  compose.py  hybrid.py
packaging/: README.md
packaging/appimage/: daimon.AppImageBuilder.yml
packaging/debian/: build.sh  daimon.control
packaging/homebrew/: daimon.rb
packaging/rpm/: daimon.spec
packaging/scoop/: daimon.json
packaging/winget/: aurorasuperbot.daimon.yaml
scripts/: author_phase3_anchors.py  author_phase4b_commons.py  author_phase4c_uncommons.py  author_phase4e_counters.py  author_phase4e_normals.py  author_v1_alpha_expansion.py  build_art_manifest.py  build_nuitka.py  build_wezterm_bundle.py  fix_npcs_phase4e.py  migrate_fixtures_v1_to_v2.py  reconcile_phase4_rarities.py
scripts/render_legacy/: README.md  cascade_legendary.py  compose_legendary.py  hybrid_render.py  simulate_tiers.py
skills/: chat-watcher.md  collection.md  duel-pvp.md  first-match.md  identity.md  install.md  loadout.md  mcp.md  mine.md  npc-match.md  pull.md  recover.md  shop.md  skins.md  trade.md
tests/: conftest.py  test_active_loadout.py  test_arena_client.py  test_arena_crypto.py  test_arena_encoding.py  test_arena_smoke.py  test_arena_state.py  test_art_prewarm.py  test_bootstrap.py  test_build_art_manifest.py  test_build_wezterm_bundle.py  test_catalog.py  test_ceremony.py  test_cli.py  test_cli_groups.py  test_combat.py  test_combat_events.py  test_combat_phase2.py  test_combat_phase4f.py  test_composited_tile.py  test_conditions.py  test_daemon_lock.py  test_daemon_spawn.py  test_elements.py  test_every_card_behavioral.py  test_home_card.py  test_hook.py  test_hud.py  test_identity.py  test_imprint.py  test_inbox.py  test_install_command.py  test_installer.py  test_kgp.py  test_kgp_painter.py  test_lazy_art.py  test_ledger.py  test_loader.py  test_loadout.py  test_loadout_loader.py  (+33 more)
tests/fixtures/: test_card_01_vanilla_head.json  test_card_02_glass_cannon_torso.json  test_card_03_tank_torso.json  test_card_04_battle_start_buff_arm.json  test_card_05_round_start_heal_arm.json  test_card_06_on_attack_self_buff_legs.json  test_card_07_on_take_damage_shield_core.json  test_card_08_on_death_revenge_head.json  test_card_09_on_ally_death_buff_torso.json  test_card_10_random_target_arm.json  test_card_11_speedy_runner_legs.json  test_card_12_debuff_aura_core.json
tools/canon_rewrite/: apply.py  mapping.py
tools/phase5/: npc_design.py  regen_npcs.py  sim_tier_curve.py
tools/pvp_live_smoke/: README.md  run.py
(+83 files in other folders)
