[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nullpoint"
version = "0.1.0"
description = "NULLPOINT — open-source agentic-first autobattler engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Santiago D. Calvo" },
]
keywords = ["autobattler", "tcg", "agentic", "ai", "game-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pydantic>=2.5",
    "cryptography>=42",          # ed25519 + signing
    "click>=8.1",                # CLI
    "rich>=13.7",                # terminal output
    "textual>=0.50",             # TUI
    "Pillow>=10.0",              # render harness
    "mnemonic>=0.20",            # BIP39
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
nullpoint = "nullpoint.cli:main"
np = "nullpoint.cli:main"

[project.urls]
Homepage = "https://github.com/aurorasuperbot/nullpoint"
Issues = "https://github.com/aurorasuperbot/nullpoint/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nullpoint*"]

[tool.setuptools.package-data]
nullpoint = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
