[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daimon-engine"
version = "0.1.0"
description = "DAIMON — open-source agentic-first autobattler engine"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [
    { name = "Santiago D. Calvo" },
]
keywords = ["autobattler", "tcg", "agentic", "ai", "game-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pydantic>=2.5",
    "cryptography>=42",          # ed25519 + signing
    "click>=8.1",                # CLI
    "rich>=13.7",                # terminal output
    "textual>=0.50",             # TUI
    "Pillow>=10.0",              # render harness
    "mnemonic>=0.20",            # BIP39
    "watchdog>=3.0",             # play.terminal state-file watcher
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
daimon = "daimon.cli:main"
dmn = "daimon.cli:main"             # short alias (`dm` collides with `cd ~`-style muscle memory in some shells)
dmn-mcp = "daimon.mcp.server:run_stdio"

[project.urls]
Homepage = "https://github.com/aurorasuperbot/daimon"
Issues = "https://github.com/aurorasuperbot/daimon/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["daimon*"]

[tool.setuptools.package-data]
daimon = [
    "py.typed",
    "catalog/*/manifest.json",
    "catalog/*/*.json",
    "npcs/manifest.json",
    "npcs/*/*.json",
    "render/wezterm.lua",        # locked WezTerm config (see daimon.render.wezterm_bundle)
    "render/fonts/*.ttf",        # bundled DejaVu typefaces (compose.py hard-fails
                                 # if these are missing — Ubuntu's fonts-dejavu-core
                                 # ships Sans+Serif but NOT italic, so we ship our own
                                 # to make render environment-portable).
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Custom markers — keep alphabetical. Pytest emits a warning for any
# unregistered marker, so anything we use in @pytest.mark.<name> must
# live here.
markers = [
    "allows_hud_spawn: opt the test back into the real _maybe_spawn_play_hud path; default for tests/test_mcp.py is a no-op (autouse fixture) so dm_match / dm_pull / dm_match_npc tests don't fork real `daimon play` HUD subprocesses into the host system.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
