[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daimon-engine"
version = "2.1.0"
description = "DAIMON — open-source agentic-first autobattler with native pywebview UI"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [
    { name = "Santiago D. Calvo" },
]
keywords = ["autobattler", "tcg", "agentic", "ai", "game-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pydantic>=2.5",
    "cryptography>=42",          # ed25519 + signing
    "click>=8.1",                # CLI
    "mnemonic>=0.20",            # BIP39
    "mcp>=1.0",                  # FastMCP server (also imported by `daimon home` for dm_home)
    # Webview app stack (post-pywebview migration, refactor.md Phase 0+)
    "pywebview>=5.0",            # OS-native webview (Edge WebView2 / WKWebView / GTK WebKit)
    "fastapi>=0.110",            # localhost-bound game backend
    "uvicorn>=0.27",             # ASGI server (in-process daemon thread)
    "websockets>=12.0",          # live balance + receipt push to the window
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
daimon = "daimon.cli:main"
dmn = "daimon.cli:main"             # short alias (`dm` collides with `cd ~`-style muscle memory in some shells)
dmn-mcp = "daimon.mcp.server:run_stdio"

[project.gui-scripts]
# GUI-subsystem (no console) twin of `daimon`. Used by the PostToolUse mining
# hook so each Claude Code tool call doesn't flash a terminal window on
# Windows. Functionally identical to `daimon` — same entry point, same
# subcommands. On POSIX, gui-scripts is a no-op (everything's a console).
daimonw = "daimon.cli:main"

[project.urls]
Homepage = "https://github.com/aurorasuperbot/daimon"
Issues = "https://github.com/aurorasuperbot/daimon/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["daimon*"]

[tool.setuptools.package-data]
daimon = [
    "py.typed",
    "catalog/*/manifest.json",
    "catalog/*/*.json",
    "npcs/manifest.json",
    "npcs/*/*.json",
    # Bundled web frontend (Phase 0+ of the pywebview migration).
    "web/static/*.html",
    "web/static/*.js",
    "web/static/components/*.js",
    "web/static/screens/*.js",
    "web/static/styles/*.css",
    "web/static/styles/components/*.css",
    "web/static/styles/screens/*.css",
    "web/static/fonts/*",
    "web/static/audio/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
